Edit to Align With Sensor Project

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "stop": "pkill --signal SIGINT index.js"
+    "start": "nodemon index.js"
   },
   "author": "Michael McCracken",
   "license": "ISC",
